--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jwt-decode": "^4.0.0",
     "next": "^14.2.6",
     "next-intl": "^3.17.2",
+    "node-forge": "^1.3.1",
     "react": "^18",
     "react-credit-cards-2": "^1.0.2",
     "react-cropper": "^2.3.3",
