--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_PAYLOAD_GRAPHQL_API = http://localhost:4000/api/graphql
 NEXT_PUBLIC_PAYLOAD_SERVER = http://localhost:4000
+NEXT_PUBLIC_PHOTO_EDITOR_LINK = https://www.fotor.com/photo-editor-app/editor/effect
