--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/node-forge": "^1.3.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/rtl-detect": "^1.0.3",
