--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.3.3",
     "@fontsource-variable/inter": "^5.0.17",
     "@gsap/react": "^2.1.1",
+    "@pqina/react-pintura": "^9.0.3",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.15.19",
     "@types/three": "^0.162.0",
@@ -25,6 +26,7 @@
     "jwt-decode": "^4.0.0",
     "next": "^14.2.6",
     "next-intl": "^3.17.2",
+    "next-transpile-modules": "^10.0.1",
     "node-forge": "^1.3.1",
     "react": "^18",
     "react-credit-cards-2": "^1.0.2",
