--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource-variable/inter": "^5.0.17",
     "@gsap/react": "^2.1.1",
+    "@mui/material": "^6.1.3",
     "@pqina/react-pintura": "^9.0.3",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.15.19",
